@@ -26,7 +26,9 @@ PHP                                                                        NEWS
   path of the request URI). (kameshj at fastmail dot fm)
 - Fixed bug #28930 (PHP sources pick wrong header files generated by bison).
   (eggert at gnu dot org, Jani)
-
+- Fixed bug #28074 (FastCGI: stderr should be written in a FCGI stderr stream).
+  (chris at ex-parrot dot com)
+  
 15 Dec 2004, PHP 5.0.3
 - Added the %F modifier to *printf to render a non-locale-aware representation
   of a float with the . as decimal seperator. (Derick)
